--- a/Templates/Blazor8/Template/Template/Template/Components/Pages/Home.razor
+++ b/Templates/Blazor8/Template/Template/Template/Components/Pages/Home.razor
@@ -1,7 +1,18 @@
 ﻿@page "/"
+@using Radzen.Blazor
 
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+
+<RadzenButton Click="teste">click</RadzenButton>
+
+@code {
+
+    private void teste()
+    {
+    }
+}
