--- a/Templates/Blazor8/Template/Template/Template.Client/_Imports.razor
+++ b/Templates/Blazor8/Template/Template/Template.Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Template.Client
+
+@inject NavigationManager _navigationManager
