--- a/Templates/Blazor8/Template/Template/Template/Components/Layout/MainLayout.razor
+++ b/Templates/Blazor8/Template/Template/Template/Components/Layout/MainLayout.razor
@@ -1,19 +1,38 @@
-﻿@inherits LayoutComponentBase
+﻿@using MudBlazor
+@inherits LayoutComponentBase
+
+<MudThemeProvider DefaultScrollbar=true @bind-IsDarkMode="@_isDarkMode" Theme="_theme" />
+<MudDialogProvider />
+<MudSnackbarProvider />
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+    <MudLayout>
+        <MudAppBar Elevation="1">
+            <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="ToggleDrawer" />
+            <MudText Typo="Typo.h6">Template</MudText>
+            <MudSpacer />
+            <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" OnClick="Teste" />
+            <MudSwitch @bind-Checked="@_isDarkMode" Color="Color.Warning" Class="ma-4" T="bool" />
+        </MudAppBar>
+        <MudDrawer @bind-Open="@open" Variant=DrawerVariant.Mini Elevation="1">
+            <MudNavMenu>
+                @if (open)
+                {
+                    <MudDrawerHeader>
+                        <MudText Typo="Typo.h6">Menu</MudText>
+                    </MudDrawerHeader>
+                }
+                <MudNavLink Match="NavLinkMatch.All" Href="/" Icon="@Icons.Material.Filled.Store">Store</MudNavLink>
+                <MudNavLink Match="NavLinkMatch.All" Href="/a" Icon="@Icons.Material.Filled.LibraryBooks">Library</MudNavLink>
+                <MudNavLink Match="NavLinkMatch.All" Href="/b" Icon="@Icons.Material.Filled.Group">Community</MudNavLink>
+            </MudNavMenu>
+        </MudDrawer>
+        <MudMainContent Class="pt-16 px-16">
+            <MudContainer Class="mt-6">
+                @Body
+            </MudContainer>
+        </MudMainContent>
+    </MudLayout>
 </div>
 
 <div id="blazor-error-ui">
